--- a/notebooks/adapter.ipynb
+++ b/notebooks/adapter.ipynb
@@ -59,7 +59,7 @@
    "id": "8a771029",
    "metadata": {},
    "source": [
-    "And, finall, we define an `Adapter` class that implements the `TargetInterface` and delegates calls to the `Adaptee` class, translating the interface."
+    "And, finally, we define an `Adapter` class that implements the `TargetInterface` and delegates calls to the `Adaptee` class, translating the interface."
    ]
   },
   {
